--- a/app/views/aboutus/aboutus.html
+++ b/app/views/aboutus/aboutus.html
@@ -3,8 +3,34 @@
 	<header>
       		<h2>{{ subject }}</h2>
         </header>
-
-        <a href="#" class="image featured"><img src="resources/images/pic08.jpg" alt="" /></a>
-	
-	<p>Helooooooo</p>
+	<div class="row">
+                <div class="6u">
+                        <article class="item">
+                                <a href="#" class="image fit"><img src="resources/images/pic02.jpg" alt="" /></a>
+                                <header>
+                                        <h3>{{ about.one }}</h3>
+                                </header>
+                        </article>
+                        <article class="item">
+                                <a href="#" class="image fit"><img src="resources/images/pic03.jpg" alt="" /></a>
+                                <header>
+                                        <h3>{{ about.two }}</h3>
+                                </header>
+                        </article>
+                 </div>
+		<div class="6u">
+                        <article class="item">
+                                <a href="#" class="image fit"><img src="resources/images/pic02.jpg" alt="" /></a>
+                                <header>
+                                        <h3>{{ about.three }}</h3>
+                                </header>
+                        </article>
+                        <article class="item">
+                                <a href="#" class="image fit"><img src="resources/images/pic03.jpg" alt="" /></a>
+                                <header>
+                                        <h3>{{ about.four }}</h3>
+                                </header>
+                        </article>
+                 </div>
+        </div>
 </div>
