--- a/app/views/contact/contact.html
+++ b/app/views/contact/contact.html
@@ -4,15 +4,12 @@
 		 <h2>{{ subject }}</h2>
       	</header>
 
-	<p>Helloooooooooooooooooooooooooooooooooo</p>
         <form method="post" action="#">
 		<div class="row">
-			<div class="4u">
+			<div class="12u">
 				<article class="item">
-					<div id="map" class="image fit" style="width:100%;height:100%;min-height:300px;min-width:100px;"></div>
-					<header>
-						<h3>Location is here</h3>
-					</header>
+					<div id="map" class="image fit" style="width:100%;height:100%;min-width:300px;min-height:300px;"></div>
+					<p>{{ address_new }}</p>
 				</acticle>
 			</div>
 		</div>
@@ -37,7 +34,7 @@
 	var container = document.getElementById('map');
 		var options = {
 			center: new daum.maps.LatLng(33.321442, 126.699725),
-			level: 5
+			level: 7
 		};
 
 	var map 		= new daum.maps.Map(container, options);
