--- a/app/views/aboutus/aboutus.html
+++ b/app/views/aboutus/aboutus.html
@@ -1,36 +1,11 @@
-<div class="container">
-
-	<header>
-      		<h2>{{ subject }}</h2>
+ <span class="image fit main bottom"><img src="resources/images/pic04.jpg" alt="" /></span>
+<div class="content">
+        <header>
+                <h2>Interdum felis blandit praesent sed augue</h2>
+                <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
         </header>
-	<div class="row">
-                <div class="6u">
-                        <article class="item">
-                                <a href="#" class="image fit"><img src="resources/images/pic02.jpg" alt="" /></a>
-                                <header>
-                                        <h3>{{ about.one }}</h3>
-                                </header>
-                        </article>
-                        <article class="item">
-                                <a href="#" class="image fit"><img src="resources/images/pic03.jpg" alt="" /></a>
-                                <header>
-                                        <h3>{{ about.two }}</h3>
-                                </header>
-                        </article>
-                 </div>
-		<div class="6u">
-                        <article class="item">
-                                <a href="#" class="image fit"><img src="resources/images/pic02.jpg" alt="" /></a>
-                                <header>
-                                        <h3>{{ about.three }}</h3>
-                                </header>
-                        </article>
-                        <article class="item">
-                                <a href="#" class="image fit"><img src="resources/images/pic03.jpg" alt="" /></a>
-                                <header>
-                                        <h3>{{ about.four }}</h3>
-                                </header>
-                        </article>
-                 </div>
-        </div>
+        <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+        <ul class="actions">
+                <li><a href="#" class="button">Learn More</a></li>
+        </ul>
 </div>
