--- a/app/resources/css/ie/v8.css
+++ b/app/resources/css/ie/v8.css
@@ -1,110 +1,194 @@
 /*
-	Prologue by HTML5 UP
+	Landed by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
-/*********************************************************************************/
-/* Basic                                                                         */
-/*********************************************************************************/
+/* Basic */
 
-	/* Section/Article */
-
-		section,
-		article
-		{
-		}
-		
-			section > .last-child,
-			article > .last-child
-			{
-				margin-bottom: 0;
-			}
-
-			section.last-child,
-			article.last-child
-			{
-				margin-bottom: 0;
-			}
-
-	/* Form */
-
-		form
-		{
-		}
-		
-			form input[type="text"],
-			form input[type="email"],
-			form input[type="password"],
-			form select,
-			form textarea
-			{
-				-ms-behavior: url('css/ie/PIE.htc');
-			}
-			
-	/* Button */
-		
-		input[type="button"],
-		input[type="submit"],
-		input[type="reset"],
-		.button
-		{
-			-ms-behavior: url('css/ie/PIE.htc');
-		}
-
-/*********************************************************************************/
-/* Header                                                                        */
-/*********************************************************************************/
-
-	#nav
-	{
-	}
-	
-		#nav ul
-		{
-		}
-		
-			#nav ul li
-			{
-			}
-			
-				#nav ul li a
-				{
-					color: #888;
-				}
-
-					#nav ul li a.active
-					{
-						background: #1C2022;
-					}
-
-/*********************************************************************************/
-/* Main                                                                          */
-/*********************************************************************************/
-
-	#main
-	{
+	body {
+		color: #ffffff;
 	}
 
-		#main > section
-		{
+	body, html, #skel-layers-wrapper {
+		height: 100%;
+	}
+
+	blockquote {
+		border-left: solid 4px #606067;
+	}
+
+	code {
+		background: #32333b;
+	}
+
+	hr {
+		border-bottom: solid 1px #606067;
+	}
+
+/* Icon */
+
+	.icon.major {
+		-ms-behavior: url("css/ie/PIE.htc");
+	}
+
+/* Image */
+
+	.image {
+		position: relative;
+		-ms-behavior: url("css/ie/PIE.htc");
+	}
+
+		.image:before {
+			display: none;
 		}
-		
-			#main > section.cover
-			{
-				background-position: auto;
-				-ms-behavior: url('css/ie/backgroundsize.min.htc');
+
+		.image img {
+			position: relative;
+			-ms-behavior: url("css/ie/PIE.htc");
+		}
+
+/* Form */
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"],
+	select,
+	textarea {
+		position: relative;
+		-ms-behavior: url("css/ie/PIE.htc");
+	}
+
+		input[type="text"]:focus,
+		input[type="password"]:focus,
+		input[type="email"]:focus,
+		select:focus,
+		textarea:focus {
+			-ms-behavior: url("css/ie/PIE.htc");
+		}
+
+	input[type="text"],
+	input[type="password"],
+	input[type="email"] {
+		line-height: 3em;
+	}
+
+	input[type="checkbox"],
+	input[type="radio"] {
+		font-size: 3em;
+	}
+
+		input[type="checkbox"] + label:before,
+		input[type="radio"] + label:before {
+			display: none;
+		}
+
+/* Table */
+
+	table tbody tr {
+		border: solid 1px #606067;
+	}
+
+	table thead {
+		border-bottom: solid 1px #606067;
+	}
+
+	table tfoot {
+		border-top: solid 1px #606067;
+	}
+
+	table.alt tbody tr td {
+		border: solid 1px #606067;
+	}
+
+/* Button */
+
+	input[type="submit"],
+	input[type="reset"],
+	input[type="button"],
+	.button {
+		border: solid 1px #ffffff !important;
+	}
+
+		input[type="submit"].special,
+		input[type="reset"].special,
+		input[type="button"].special,
+		.button.special {
+			border: 0 !important;
+		}
+
+/* Goto Next */
+
+	.goto-next {
+		display: none;
+	}
+
+/* Spotlight */
+
+	.spotlight {
+		height: 100%;
+	}
+
+		.spotlight .content {
+			background: #272833;
+		}
+
+/* Wrapper */
+
+	.wrapper.style2 input[type="text"]:focus,
+	.wrapper.style2 input[type="password"]:focus,
+	.wrapper.style2 input[type="email"]:focus,
+	.wrapper.style2 select:focus,
+	.wrapper.style2 textarea:focus {
+		border-color: #ffffff;
+	}
+
+	.wrapper.style2 input[type="submit"].special:hover, .wrapper.style2 input[type="submit"].special:active,
+	.wrapper.style2 input[type="reset"].special:hover,
+	.wrapper.style2 input[type="reset"].special:active,
+	.wrapper.style2 input[type="button"].special:hover,
+	.wrapper.style2 input[type="button"].special:active,
+	.wrapper.style2 .button.special:hover,
+	.wrapper.style2 .button.special:active {
+		color: #e44c65 !important;
+	}
+
+/* Dropotron */
+
+	.dropotron {
+		background: #272833;
+		box-shadow: none !important;
+		-ms-behavior: url("css/ie/PIE.htc");
+	}
+
+		.dropotron > li a, .dropotron > li span {
+			color: #ffffff !important;
+		}
+
+		.dropotron.level-0 {
+			margin-top: 0;
+		}
+
+			.dropotron.level-0:before {
+				display: none;
 			}
 
-/*********************************************************************************/
-/* Side Panel                                                                    */
-/*********************************************************************************/
+/* Header */
 
-	#sidePanelToggle
-	{
+	#header {
+		background: #272833;
 	}
-	
-		#sidePanelToggle .toggle
-		{
-			background-color: #888;
+
+/* Banner */
+
+	#banner {
+		height: 100%;
+	}
+
+		#banner:before {
+			height: 100%;
+		}
+
+		#banner:after {
+			background-image: url("images/banner-overlay.png");
 		}
