--- a/app/views/contact/contact.html
+++ b/app/views/contact/contact.html
@@ -1,36 +1,17 @@
 <div class="container">
-
-	<header>
-		 <h2>{{ subject }}</h2>
-      	</header>
-
-        <form method="post" action="#">
-		<div class="row">
-			<div class="12u">
-				<article class="item">
-					<div id="map" class="image fit" style="width:100%;height:100%;min-width:300px;min-height:300px;"></div>
-					<p>{{ address_new }}</p>
-				</acticle>
-			</div>
-		</div>
-        	<div class="row 50%">
-                	<div class="6u"><input type="text" name="name" placeholder="Name" /></div>
-                        <div class="6u"><input type="text" name="email" placeholder="Email" /></div>
+        <header>
+                <h2>Magna faucibus lorem diam</h2>
+                <p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
+        </header>
+        <form method="post" action="#" class="container 50%">
+                <div class="row uniform 50%">
+                        <div class="8u 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Your Email Address" /></div>
+                        <div class="4u$ 12u$(xsmall)"><input type="submit" value="Get Started" class="fit special" /></div>
                 </div>
-                <div class="row 50%">
-                        <div class="12u">
-	                        <textarea name="message" placeholder="Message"></textarea>
-                        </div>
-                </div>
-                <div class="row">
-        	        <div class="12u">
-                                <input type="submit" value="Send Message" />
-                        </div>
-                </div>
-         </form>
+        </form>
 </div>
-
 <script>
+	/*
 	var container = document.getElementById('map');
 		var options = {
 			center: new daum.maps.LatLng(33.321442, 126.699725),
@@ -48,4 +29,5 @@
 	//map.addControl(mapTypeControl, daum.maps.ControlPosition.TOPRIGHT);
 	map.addControl(zoomControl, daum.maps.ControlPosition.RIGHT);
 	marker.setMap(map);
+	*/
 </script>
