--- a/app/views/greeting/greeting.html
+++ b/app/views/greeting/greeting.html
@@ -1,24 +1,11 @@
-<div class="container">
-	<header>
-        	<h2>{{ subject }}</h2>
+<span class="image fit main"><img src="resources/images/pic03.jpg" alt="" /></span>
+<div class="content">
+        <header>
+                <h2>Interdum amet non magna accumsan</h2>
+                <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
         </header>
-
-	<p>{{ name }}</p>
-
-        <div class="row">
-        	<div class="4u">
-                	<article class="item">
-                        	<a href="#" class="image fit"><img src="resources/images/pic02.jpg" alt="" /></a>
-                                <header>
-                                	<h3>Ipsum Feugiat</h3>
-                                </header>
-                        </article>
-                        <article class="item">
-                                <a href="#" class="image fit"><img src="resources/images/pic03.jpg" alt="" /></a>
-                                <header>
-                                        <h3>Rhoncus Semper</h3>
-                                </header>
-                        </article>
-                 </div>
-	</div>
+        <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+        <ul class="actions">
+                <li><a href="#" class="button">Learn More</a></li>
+        </ul>
 </div>
