--- a/app/views/intro/intro.html
+++ b/app/views/intro/intro.html
@@ -1,10 +1,27 @@
-<div class="container">
-	<header>
-        	<h2 class="alt">안녕하세요.<strong> {{ name }}</strong>에 오신 것을 환영합니다.</h2>
-                <p>본 사이트는 html5에 최적화 되어 있습니다.</p>
-        </header>
-
-        <footer>
-        	<a href="#portfolio" class="button scrolly">인사말로 이동</a>
-        </footer>
+<span class="image fit main"><img src="resources/images/pic02.jpg" alt="" /></span>
+<div class="content">
+        <div class="container">
+                <div class="row">
+                        <div class="4u 12u$(medium)">
+                                <header>
+                                        <h2>Odio faucibus ipsum integer consequat</h2>
+                                        <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+                                </header>
+                        </div>
+                        <div class="4u 12u$(medium)">
+                                <p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
+                                Blandit orci porttitor semper. Arcu phasellus tortor enim mi
+                                nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
+                                augue varius tempus lobortis porttitor accumsan consequat
+                                adipiscing lorem dolor.</p>
+                        </div>
+                        <div class="4u$ 12u$(medium)">
+                                <p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
+                                adipiscing adipiscing metus massa. Blandit orci porttitor semper.
+                                Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
+                                mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
+                                ipsum dolor nullam.</p>
+                        </div>
+                </div>
+        </div>
 </div>
