--- a/app/views/contact/contact.html
+++ b/app/views/contact/contact.html
@@ -1,6 +1,6 @@
 <div class="container">
         <header>
-                <h2>Magna faucibus lorem diam</h2>
+                <h2>찾아가기</h2>
                 <p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
         </header>
         <form method="post" action="#" class="container 50%">
