--- a/app/views/greeting/greeting.html
+++ b/app/views/greeting/greeting.html
@@ -2,7 +2,7 @@
 <div class="content">
         <header>
                 <h2>대표 인사말</h2>
-                <p>Nunc commodo accumsan eget id nisi eu col volutpat magna</p>
+                <p>골프를 즐기시는 여러분들을 환영합니다.</p>
         </header>
         <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
         <ul class="actions">
