--- a/app/views/intro/intro.html
+++ b/app/views/intro/intro.html
@@ -5,7 +5,7 @@
                         <div class="4u 12u$(medium)">
                                 <header>
                                         <h2>소개</h2>
-                                        <p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+                                        <p>청남 골프 연습장은 제주 남원의<br /> 골프 역사가 시작이 된 곳입니다.</p>
                                 </header>
                         </div>
                         <div class="4u 12u$(medium)">
