--- a/app/views/aboutus/aboutus.html
+++ b/app/views/aboutus/aboutus.html
@@ -2,9 +2,14 @@
 <div class="content">
         <header>
                 <h2>이 곳에 대하여</h2>
-                <p>Accumsan integer ultricies aliquam vel massa sapien phasellus</p>
+                <!-- <p>근처 5 개의 골프장 중심에 있습니다.</p> -->
         </header>
-        <p>Feugiat accumsan lorem eu ac lorem amet ac arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer mi sed nascetur cep aliquet augue varius tempus lobortis porttitor lorem et accumsan consequat adipiscing lorem.</p>
+	<ul class="alt">
+		<li>천연잔디 위에서 스윙을 할 수 있는 생동감 !</li>
+		<li>드라이버의 방향을 진단할 수 있는 200 야드 !</li>
+		<li>여러분들의 비지니스를 위한 장소 !</li>
+		<li>dd</li>
+	</ul>
         <ul class="actions">
                 <li><a href="#" class="button">Learn More</a></li>
         </ul>
