--- a/app/views/aboutus/aboutus.html
+++ b/app/views/aboutus/aboutus.html
@@ -1,4 +1,4 @@
- <span class="image fit main bottom"><img src="resources/images/pic04.jpg" alt="" /></span>
+ <span class="image fit main bottom"><img src="resources/images/golf/20150413_73.jpg" alt="" /></span>
 <div class="content">
         <header>
                 <h2>이 곳에 대하여</h2>
