--- a/app/views/greeting/greeting.html
+++ b/app/views/greeting/greeting.html
@@ -1,4 +1,4 @@
-<span class="image fit main"><img src="resources/images/pic03.jpg" alt="" /></span>
+<span class="image fit main"><img src="resources/images/golf/20150413_73.jpg" alt="" /></span>
 <div class="content">
         <header>
                 <h2>대표 인사말</h2>
