--- a/app/views/intro/intro.html
+++ b/app/views/intro/intro.html
@@ -1,4 +1,4 @@
-<span class="image fit main"><img src="resources/images/pic02.jpg" alt="" /></span>
+<span class="image fit main"><img src="resources/images/golf/20150413_73.jpg" alt="" /></span>
 <div class="content">
         <div class="container">
                 <div class="row">
