--- a/app/views/composite/composite.html
+++ b/app/views/composite/composite.html
@@ -13,12 +13,12 @@
                        	<section class="4u 6u$(medium) 12u$(xsmall)">
                         	<span class="icon alt major fa-krw"></span>
                                 <h3>회원제 운영</h3>
-                       		<p>월 십만원(100,000 원) 의 이용요금으로</br /> 운영되고 있습니다.</p>
+                       		<p>월 십만원(￦100,000 원) 의 이용요금으로</br /> 운영되고 있습니다.</p>
                         </section>
                         <section class="4u$ 6u(medium) 12u$(xsmall)">
                                 <span class="icon alt major fa-group"></span>
                                 <h3>동우회</h3>
-                                <p>남원, 위미, 태흥 등의 여러 동우회가 <br />운영 중입니다.</p>
+                                <p>남원, 위미, 태흥 등의 여러 지역 동우회가 <br />운영 중입니다.</p>
                         </section>
 			<section class="4u 6u$(medium) 12u$(xsmall)">
                                 <span class="icon alt major fa-sitemap"></span>
@@ -33,7 +33,7 @@
                         <section class="4u$ 6u$(medium) 12u$(xsmall)">
                                 <span class="icon alt major fa-home"></span>
                                 <h3>락커룸</h3>
-                                <p>골프연습장 내에 락커룸이 있어<br /> 수납하실 수 있습니다.</p>
+                                <p>골프연습장 내에 락커룸이 있어<br /> 수납이 가능합니다.</p>
                         </section>	
 		</div>
 	</div>
@@ -45,3 +45,4 @@
 		</div>
 	</div>
 </div>
+
